// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeScript > should apply ThemeScript 1`] = `
<div>
  <script>
    (function (){
const o=localStorage.getItem('__DF_THEME_SELECTED__')||(true&&window.matchMedia('(prefers-color-scheme:dark)').matches?'dark':'default');document.documentElement.setAttribute('data-theme',o);})()
  </script>
</div>
`;

exports[`ThemeScript > should apply ThemeScript with not auto 1`] = `
<div>
  <script>
    (function (){
const o=localStorage.getItem('__DF_THEME_SELECTED__')||(false&&window.matchMedia('(prefers-color-scheme:dark)').matches?'dark':'default');document.documentElement.setAttribute('data-theme',o);})()
  </script>
</div>
`;

exports[`ThemeScript > should apply ThemeScript with theme 1`] = `
<div>
  <script>
    (function (){document.documentElement.setAttribute('data-theme',default);}())
  </script>
</div>
`;
